# distorter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
data/: calib.xml
ui/: ValueWidget.qml  main.qml  qml.qrc
util/: Distorter.cpp  Distorter.hpp  ImageProvider.cpp  ImageProvider.hpp
